--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.0.1",
     "react-toastify": "^8.1.0",
+    "redux-logger": "^3.0.6",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.1",
     "web-vitals": "^0.2.4",
