--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "^3.0.1",
     "react-toastify": "^8.1.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "reduxjs-toolkit-persist": "^7.0.7",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.1",
