--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.25.0",
     "firebase": "^9.6.5",
     "formik": "^2.2.9",
+    "formik-file-and-image-input": "^0.0.6",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "^3.0.1",
     "react-toastify": "^8.1.1",
+    "react-typewriter": "^0.4.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "reduxjs-toolkit-persist": "^7.2.1",
