--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.2.9",
     "formik-file-and-image-input": "^0.0.6",
     "moment": "^2.29.1",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
@@ -23,6 +24,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "reduxjs-toolkit-persist": "^7.2.1",
+    "sass": "^1.49.8",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.1",
     "web-vitals": "^0.2.4",
