--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^3.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^8.1.1",
     "react-typewriter": "^0.4.1",
     "redux-logger": "^3.0.6",
